--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 .DS_Store
 /node_modules/
 **/target
+documentation/ocp4devex/.settings
+documentation/.project
+documentation/.settings
+documentation/.settings
+documentation/ocp4devex/.project
