--- a/documentation/pom.xml
+++ b/documentation/pom.xml
@@ -114,6 +114,7 @@
                         <email>${facilitatorEmail}</email>
                         <authorTitle>${facilitatorTitle}</authorTitle>
                         <webConsoleUrl>${webConsoleUrl}</webConsoleUrl>
+                        <terminalUrl>${terminalUrl}</terminalUrl>
                         <orgname>Red Hat</orgname>
                         
                     </attributes>
