Work in progress, added files for pull tests in oconline

--- a/attendee/tekton/tasklogin.yaml
+++ b/attendee/tekton/tasklogin.yaml
@@ -21,3 +21,9 @@ spec:
       args:
         - "project"
         - "tektonNUMBER"
+    - name: whoami
+      image: quay.io/ilawson/oconline
+      command:
+        - oc
+      args:
+        - "whoami"
