--- a/attendee/tekton/taskrunlogin.yaml
+++ b/attendee/tekton/taskrunlogin.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1alpha1
 kind: TaskRun
 metadata:
-  name: taskruntest
+  name: taskrunlogin
 spec:
   taskRef:
-    name: taskwatch
+    name: tasklogin
