--- a/build-cli-image/dockerfile
+++ b/build-cli-image/dockerfile
@@ -3,25 +3,29 @@ FROM quay.io/ilawson/oconline
 USER root
 
 RUN curl -sL -o /tmp/oc.tar.gz https://mirror.openshift.com/pub/openshift-v4/clients/oc/4.2/linux/oc.tar.gz && \
-tar -C /tmp -xf /tmp/oc.tar.gz && \
+tar -C /tmp -xf /tmp/oc.tar.gz --no-same-owner && \
 mv /tmp/oc /usr/local/bin && \
 chmod +x /usr/local/bin/oc && \
-rm /tmp/oc.tar.gz
+rm /tmp/* &&
 
 RUN curl -sL -o /tmp/tkn.tar.gz https://github.com/tektoncd/cli/releases/download/v0.6.0/tkn_0.6.0_Linux_x86_64.tar.gz && \
-tar -C /tmp -xf /tmp/tkn.tar.gz && \
+tar -C /tmp -xf /tmp/tkn.tar.gz --no-same-owner && \
 mv /tmp/tkn /usr/local/bin && \
 chmod +x /usr/local/bin/tkn && \
-rm /tmp/tkn.tar.gz
+rm /tmp/* &&
 
 RUN curl -sL -o /tmp/kamel.tar.gz https://github.com/apache/camel-k/releases/download/1.0.0-M4/camel-k-client-1.0.0-M4-linux-64bit.tar.gz && \
-tar -C /tmp -xf /tmp/kamel.tar.gz && \
+tar -C /tmp -xf /tmp/kamel.tar.gz --no-same-owner && \
 mv /tmp/kamel /usr/local/bin && \
 chmod +x /usr/local/bin/kamel && \
-rm /tmp/kamel.tar.gz
+rm /tmp/* && 
 
 RUN curl -sL -o /usr/local/bin/odo https://mirror.openshift.com/pub/openshift-v4/clients/odo/latest/odo-linux-amd64 && \
 chmod +x /usr/local/bin/odo
 
-USER 1001
+run chmod a+w /tmp
+
+run useradd student
+
+USER student
 
