--- a/playbooks/Deploy_Advanced_Course.yml
+++ b/playbooks/Deploy_Advanced_Course.yml
@@ -3,6 +3,7 @@
 
   roles:
     - login_ocp
+    - deploy-tekton-operator
     - deploy_serverless_operator
     - deploy_serverlesseventing_operator
     - deploy_camelk_operator
