--- a/build-cli-image/dockerfile
+++ b/build-cli-image/dockerfile
@@ -1,6 +1,10 @@
-FROM quay.io/ilawson/oconline
+FROM fedora
 
 USER root
+
+ENV GOPATH=/go
+
+RUN  mkdir /go && chmod 755 /go && yum install -y git golang-bin && go get github.com/yudai/gotty && yum clean all && mkdir /workspace && chmod 777 workspace
 
 RUN curl -sL -o /tmp/oc.tar.gz https://mirror.openshift.com/pub/openshift-v4/clients/oc/4.2/linux/oc.tar.gz && \
 tar -C /tmp -xf /tmp/oc.tar.gz --no-same-owner && \
@@ -35,4 +39,11 @@ run chmod a+w /tmp
 
 run useradd student
 
+WORKDIR /workspace
+
+EXPOSE 8080
+
 USER student
+
+ENTRYPOINT ["/go/bin/gotty"]
+CMD ["-w","bash"]
