--- a/playbooks/roles/deploy_camelk_operator/tasks/main.yml
+++ b/playbooks/roles/deploy_camelk_operator/tasks/main.yml
@@ -3,5 +3,9 @@
 
 # Deploy Camel K operator - currently using community operator
 - name: Deploy Camel K Operator
-  shell: oc apply -f {{ role_path }}/files/camelkoperator.yaml
-  ignore_errors: no
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/camelkoperator.yaml"
