--- a/playbooks/roles/deploy_tekton_operator/tasks/main.yml
+++ b/playbooks/roles/deploy_tekton_operator/tasks/main.yml
@@ -1,7 +1,10 @@
 ---
 # file: main.yml
 
-# Deploy community pipeline operator
 - name: Deploy Tekton Operator
-  shell: oc apply -f {{ role_path }}/files/pipelines.yml
-  ignore_errors: no
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/pipelines.yml"
