--- a/workshopbot/pom.xml
+++ b/workshopbot/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>kubernetes-client</artifactId>
             <version>4.6.4</version>
         </dependency>        
+        <dependency>
+            <groupId>io.fabric8</groupId>
+            <artifactId>openshift-client</artifactId>
+            <version>4.8.0</version>
+        </dependency>        
     </dependencies>
 
     <properties>
