--- a/build-cli-image/dockerfile
+++ b/build-cli-image/dockerfile
@@ -37,6 +37,10 @@ RUN dnf -y install podman container-selinux --enablerepo updates-testing
 
 RUN dnf -y install java-1.8.0-openjdk java-11-openjdk wget
 
+RUN dnf -y install bash-completion
+
+RUN oc completion bash >>/etc/bash_completion.d/oc_completion
+
 WORKDIR /workspace
 
 EXPOSE 8080
