--- a/playbooks/Deploy_Advanced_Course.yml
+++ b/playbooks/Deploy_Advanced_Course.yml
@@ -7,3 +7,4 @@
     - deploy_serverless_operator
     - deploy_serverlesseventing_operator
     - deploy_camelk_operator
+    - deploy_amqstreams_operator
