Added buildah and skopeo to the terminal image

--- a/build-cli-image/dockerfile
+++ b/build-cli-image/dockerfile
@@ -35,6 +35,10 @@ rm /tmp/*
 
 RUN dnf -y install podman container-selinux --enablerepo updates-testing
 
+RUN dnf -y install buildah container-selinux --enablerepo updates-testing
+
+RUN dnf -y install skopeo container-selinux --enablerepo updates-testing
+
 RUN dnf -y install java-1.8.0-openjdk java-11-openjdk wget
 
 RUN dnf -y install bash-completion
