--- a/attendee/myholiday/adventure/package.json
+++ b/attendee/myholiday/adventure/package.json
@@ -8,6 +8,7 @@
     "start": "node ./adventure.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "ip": "^1.1.5"
   }
 }
