--- a/attendee/myholiday/package.json
+++ b/attendee/myholiday/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "adventure-holiday-application",
+  "name": "holiday-application",
   "version": "1.0.0",
-  "description": "The adventure holiday booking site",
-  "main": "./adventure.js",
+  "description": "The holiday booking site",
+  "main": "./holiday.js",
   "private": true,
   "scripts": {
-    "start": "node ./adventure.js"
+    "start": "node ./holiday.js"
   },
   "dependencies": {
     "express": "^4.17.1",
