--- a/attendee/myholiday/package-route.yaml
+++ b/attendee/myholiday/package-route.yaml
@@ -2,12 +2,12 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   labels:
-    app: cruise-holiday
-  name: cruise-route
+    app: package-holiday
+  name: package-route
 spec:
   host: URL
-  path: "/cruise"
+  path: "/package"
   to:
     kind: Service
-    name: cruise-holiday
+    name: package-holiday
     weight: 100
