--- a/attendee/myholiday/short-break-route.yaml
+++ b/attendee/myholiday/short-break-route.yaml
@@ -2,12 +2,12 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   labels:
-    app: cruise-holiday
-  name: cruise-route
+    app: short-holiday
+  name: short-holiday-route
 spec:
   host: URL
-  path: "/cruise"
+  path: "/short-break"
   to:
     kind: Service
-    name: cruise-holiday
+    name: short-holiday
     weight: 100
