added instruction to run printer integration in Kafka section

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ documentationbasic/ocp4devex/.project
 documentationbasic/ocp4devex/.settings/org.eclipse.core.resources.prefs
 documentationbasic/ocp4devex/.settings/org.eclipse.m2e.core.prefs
 
+workshopbot/.project
