--- a/camelfiles/streams/messages.yaml
+++ b/camelfiles/streams/messages.yaml
@@ -2,6 +2,9 @@ apiVersion: messaging.knative.dev/v1alpha1
 kind: KafkaChannel
 metadata:
   name: messages
+  namespace: sandboxXX
+  annotations:
+    eventing.knative.dev/scope: namespace
 spec:
   numPartitions: 1
   replicationFactor: 1
