--- a/camelfiles/streams/config-kafka.yaml
+++ b/camelfiles/streams/config-kafka.yaml
@@ -6,4 +6,4 @@ metadata:
 data:
   # Broker URL. Replace this with the URLs for your kafka cluster,
   # which is in the format of my-cluster-kafka-bootstrap.my-kafka-namespace:9092.
-  bootstrapServers: my-cluster-kafka-bootstrap
+  bootstrapServers: my-cluster-kafka-bootstrap:9092
