Service mesh first chapter done.

--- a/attendee/service-mesh/phase2/virtual-service-layer2.yaml
+++ b/attendee/service-mesh/phase2/virtual-service-layer2.yaml
@@ -4,9 +4,7 @@ metadata:
   name: layer2
 spec:
   hosts:
-  - layer2-layers.apps.cluster-c2d5.c2d5.example.opentlc.com
-  gateways:
-  - layer2-gateway
+  - layer2
   http:
   - match:
     - uri:
