--- a/attendee/service-mesh/phase2/layer2.yaml
+++ b/attendee/service-mesh/phase2/layer2.yaml
@@ -8,7 +8,7 @@ metadata:
     app.openshift.io/runtime: nodejs
   name: layer2-v1
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: layer2
@@ -35,6 +35,44 @@ spec:
             value: layer2
           - name: VERSION_ID
             value: v1
+---
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+  labels:
+    app: layer2
+    version: v2
+    app.kubernetes.io/part-of: layers
+    app.openshift.io/runtime: nodejs
+  name: layer2-v2
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: layer2
+      version: v2
+  template:
+    metadata:
+      labels:
+        app: layer2
+        version: v2
+      annotations:
+        sidecar.istio.io/inject: "true"
+    spec:
+      containers:
+      - env:
+        image: quay.io/marrober/layers:latest
+        imagePullPolicy: Always
+        name: layer2
+        ports:
+        - containerPort: 8080
+          name: http
+          protocol: TCP
+        env:
+          - name: THIS_LAYER_NAME
+            value: layer2
+          - name: VERSION_ID
+            value: v2
 ---
 apiVersion: v1
 kind: Service
