Added Service mesh install and config to playbook

--- a/playbooks/Deploy_Advanced_Course.yml
+++ b/playbooks/Deploy_Advanced_Course.yml
@@ -8,4 +8,8 @@
     - deploy_serverless_operator
     - deploy_serverlesseventing_operator
     - deploy_camelk_operator
-    
+
+#######################
+# Deploy Service Mesh #
+#######################    
+    - deploy_service_mesh
