--- a/images/terminal/Dockerfile
+++ b/images/terminal/Dockerfile
@@ -47,6 +47,8 @@ RUN oc completion bash >>/etc/bash_completion.d/oc_completion
 
 RUN cd /workspace && git clone https://github.com/utherp0/workshop4
 
+RUN chmod -R 766 /workspace/workshop4
+
 WORKDIR /workspace
 
 EXPOSE 8080
