fix for AMQ Streams and Inmemory together

--- a/setup/playbooks/roles/deploy_serverlesseventing_operator/files/knativekafka.yaml
+++ b/setup/playbooks/roles/deploy_serverlesseventing_operator/files/knativekafka.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: knative-eventing
 spec:
   bootstrapServers: 'kafka-cluster-kafka-bootstrap:9092'
-  setAsDefaultChannelProvisioner: true
+  setAsDefaultChannelProvisioner: false
