--- a/attendee/tekton/task-4.yaml
+++ b/attendee/tekton/task-4.yaml
@@ -23,3 +23,4 @@ spec:
     - name: view-workspace-content
       image: quay.io/openshift/origin-cli:latest
       command: ["ls"]
+      args: ["-laR"]
