Attempt to re-fix the operator deployment

--- a/setup/playbooks/Deploy_Advanced_Course.yml
+++ b/setup/playbooks/Deploy_Advanced_Course.yml
@@ -8,4 +8,6 @@
     - deploy_serverless_operator
     - deploy_serverlesseventing_operator
     - deploy_camelk_operator
+    - deploy_service_mesh
+    
     
