--- a/setup/playbooks/roles/deploy_service_mesh/files/jaeger.yaml
+++ b/setup/playbooks/roles/deploy_service_mesh/files/jaeger.yaml
@@ -5,6 +5,6 @@ metadata:
   namespace: openshift-operators
 spec:
   channel: stable
-  name: jaeger-operator
+  name: jaeger-product
   source: redhat-operators
   sourceNamespace: openshift-marketplace
