Changed documentation to use workshopper and username-distribution apps

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,6 @@
 .DS_Store
 /node_modules/
-**/target
-documentation/ocp4devex/.settings
-documentation/.project
-documentation/.settings
-documentation/.settings
-documentation/ocp4devex/.project
 .vscode/settings.json
 .vscode/spellright.dict
 attendee/simpleRest/.odo/
-documentationbasic/.project
-documentationbasic/.settings/org.eclipse.core.resources.prefs
-documentationbasic/.settings/org.eclipse.m2e.core.prefs
-documentationbasic/ocp4devex/.project
-documentationbasic/ocp4devex/.settings/org.eclipse.core.resources.prefs
-documentationbasic/ocp4devex/.settings/org.eclipse.m2e.core.prefs
-lab-Content
-workDir
-workshopbot/.project
-documentationadvanced/.project
-documentationadvanced/.settings/
-documentationadvanced/ocp4devex/.project
-documentationadvanced/ocp4devex/.settings/
+setup/playbooks/roles/deploy_docs/files/manifests/*
