--- a/setup/playbooks/roles/deploy_docs/tasks/main.yml
+++ b/setup/playbooks/roles/deploy_docs/tasks/main.yml
@@ -17,26 +17,13 @@
     dest: "{{ role_path }}/files/manifests/{{ item.id }}.yml"
   loop: "{{ workshop_manifests }}"
 
+- name: create configMap from manifests
+  shell: "oc create configmap manifests --from-file={{ role_path }}/files/manifests"
+
 - name: Create httpd application
   k8s:
     state: present
     definition: "{{ lookup('file', 'httpd.yml') }}" 
-
-- name: get name of httpd pod
-  shell: oc get pod -l deploymentconfig=labs -o jsonpath="{.items[0].metadata.name}"
-  register: podname
-  retries: 50
-  delay: 5
-  until: podname.rc == 0 # retry while we wait for pods to be created
-
-- name: wait until pod is running
-  shell: oc wait --for=condition=Ready pod/{{ podname.stdout }}
-
-- name: copy lab files into httpd container
-  shell: oc rsync {{ role_path }}/../../../../labs {{ podname.stdout }}:/var/www/html
-
-- name: copy manifest files into httpd container
-  shell: oc rsync {{ role_path }}/files/manifests {{ podname.stdout }}:/var/www/html/manifests
 
 - name: get list of manifest filenames on this machine
   command: ls {{ role_path }}/files/manifests
@@ -58,13 +45,16 @@
     kind: Namespace
     state: present
 
-- name: Deploy username-distribution application
-  k8s:
-    state: present
-    definition: "{{ lookup('template', 'username-distribution.json.j2') }}"
-
 - name: change to username-distribution project in oc
   shell: oc project username-distribution
+
+- name: create project template locally from jinja template
+  template:
+    src: "{{ role_path }}/templates/username-distribution.yml.j2"
+    dest: "{{ role_path }}/files/username-distribution.yml"
+
+- name: Deploy username-distribution application
+  shell: "oc new-app --file={{ role_path }}/files/username-distribution.yml"
 
 - name: Get route to username-distribution application
   shell: "oc get route username-distribution --template='{{ '{{' }} .spec.host {{ '}}' }}'"
