CodeReady automation script, updated Quarkus lab

--- a/setup/playbooks/Deploy_Advanced_Course.yml
+++ b/setup/playbooks/Deploy_Advanced_Course.yml
@@ -9,5 +9,6 @@
     - deploy_serverlesseventing_operator
     - deploy_camelk_operator
     - deploy_service_mesh
+    - deploy_codeready_operator
     
     
