--- a/setup/playbooks/roles/deploy_codeready_operator/files/stack.imagestream.yaml
+++ b/setup/playbooks/roles/deploy_codeready_operator/files/stack.imagestream.yaml
@@ -3,7 +3,7 @@ apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
   name: quarkus-stack
-  namespace: crw
+  namespace: openshift
 spec:
   tags:
   - annotations:
