Updates for 4.5 for : application deployment strategies, health probes, odo, service mesh, quay and tekton

--- a/attendee/service-mesh/phase3/layer2.yaml
+++ b/attendee/service-mesh/phase3/layer2.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
@@ -39,7 +39,7 @@ spec:
             value: layer3
 ---
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
