--- a/attendee/service-mesh/phase3/layer3.yaml
+++ b/attendee/service-mesh/phase3/layer3.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
@@ -36,7 +36,7 @@ spec:
           - name: VERSION_ID
             value: v1
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
@@ -74,7 +74,7 @@ spec:
           - name: VERSION_ID
             value: v2
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
@@ -112,7 +112,7 @@ spec:
           - name: VERSION_ID
             value: v3
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
