--- a/attendee/service-mesh/phase4/layer2-B.yaml
+++ b/attendee/service-mesh/phase4/layer2-B.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
@@ -36,7 +36,7 @@ spec:
           - name: VERSION_ID
             value: instance-1
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
